# mrzdetector

./: .gitignore
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/net/telepathix/mrzdetection/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/net/telepathix/mrzdetection/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/navigation/: nav_graph.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/net/telepathix/mrzdetection/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Android/mrzdetector/: build.gradle
Android/mrzdetector/native/: CMakeLists.txt  ExtremeCalculator.cpp
Android/mrzdetector/src/androidTest/java/net/telepathix/mrzdetector/: ExampleInstrumentedTest.kt
Android/mrzdetector/src/main/: AndroidManifest.xml
Android/mrzdetector/src/main/java/net/telepathix/mrzdetector/: ExtremeCalculator.kt  MrzDetector.kt  Quadrilateral.kt
Android/mrzdetector/src/main/res/values/: strings.xml  themes.xml
Android/mrzdetector/src/test/java/net/telepathix/mrzdetector/: ExampleUnitTest.kt
iOS/MrzDetection/: ExtremeCalculator.h  ExtremeCalculator.mm  MrzDetection.h  MrzDetector.swift  Quadrilateral.swift  module.map
iOS/MrzDetection.xcodeproj/: project.pbxproj
iOS/MrzDetectionTests/: MrzDetectionTests.swift
